2009-02-10  Jeffrey Stedfast  <fejj@novell.com>

	* minizip/unzip.c (unzlocal_DosDateToTmuDate): Fix ambiguous
	else's.
	(unzlocal_DosDateToTmuDate): Here too.
	(unzlocal_CheckCurrentFileCoherencyHeader): And here.

	* old-map.c: Added prototypes to silence compile warnings. Looks
	like this file is supposed to be autogenerated, so probably not
	the right fix but I can't find the autogen script.

	* map.h (helper_Mono_Posix_getpwnamuid): Added a prototype for
	this - it doesn't seem to be used anywhere in mono, so
	maybe it can be removed but I'm not positive.
	(map_Mono_Posix_PollEvents): Added prototype.
	(map_Mono_Posix_Signals): Added prototype.

	* macros.c: #include "map.h" to silence compile warnings about no
	previous prototypes.

2009-02-09  Jeffrey Stedfast  <fejj@novell.com>

	* supportw.c (SetWindowPos): Fixed compile warnings about
	printf-style formatters.
	(SendMessageA): Same.

2009-01-14  Geoff Norton  <gnorton@novell.com>

	* supportw.c: Use unsigned int instead of uint, as its more portable.
	Fixes compilation issue on Mac OSX.

2009-01-08  Rodrigo Kumpera  <rkumpera@novell.com>

	* signal.c: Don't allow registration of a realtime signal to happen
	if it was already registered outside of Mono.Posix.

2008-12-19  Jonathan Pryor  <jpryor@novell.com>

	* signal.c: Improve error checking within Mono_Posix_FromRealTimeSignum.

2008-12-19  Jonathan Pryor  <jpryor@novell.com>

	* map.h: Flush.
	* signal.c: Add Mono_Posix_SIGRTMIN(), Mono_Posix_SIGRTMAX(),
	  Mono_Posix_FromRealTimeSignum().
	  Patch thanks to tim.jenks@realtimeworlds.com.

2008-11-06  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am: Missed out on a header file for minizip

2008-11-06  Alan McGovern  <amcgovern@novell.com>

	* minizip/minizip/miniunz.c :
	* Makefile.am: Removed unnecessary file from build and svn.

2008-11-06  Alan McGovern  <amcgovern@novell.com>

	* minizip/*.am :
	* Makefile.am: Merged minizip build into the support code.
